part2/10/k8s/manifests/todo-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-namespace
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8086
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-namespace
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: deecaad/devopsk8s:part2-10-todo-backend-1
