part2/10/k8s/manifests/todo-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-namespace
  name: todo-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-namespace
  name: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: todo-frontend-pvc
      containers:
        - name: todo-frontend
          image: deecaad/devopsk8s:part2-10-todo-frontend-1
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/dist/images
